[project]
name = "postmortem-generator"
version = "0.1.0"
description = "AI-powered incident post-mortem generator"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.49.0",
    "streamlit>=1.40.0",
    "fpdf2>=2.8.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
